started work on main.js and ui.js

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <form id="journal-form">
-      <label for="goal">Enter a title:</label>
-      <input id="goal" type="number">
+      <label for="title">Enter a title:</label>
+      <input id="title" type="text">
+      <br>
+      <label for="entry">Enter your journal entry:</label>
+      <input id="entry" type="text">
       <button type="submit">Submit Journal Entry</button>
     </form>
     <ul id="solution"></ul>
