--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script
-      src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script type="text/javascript" src="bundle.js"></script>
     <title>Journal</title>
   </head>
@@ -14,7 +12,9 @@
       <label for="entry">Enter your journal entry:</label>
       <input id="entry" type="text">
       <button type="submit">Submit Journal Entry</button>
+      <button type="submit" id="word-count">Get word count</button>
+
     </form>
-    <ul id="solution"></ul>
+    <div id="solution"></div>
   </body>
 </html>
